--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,20 @@ dist
 
 # TernJS port file
 .tern-port
+
+## React
+# dependencies
+/client/.pnp
+.pnp.js
+
+# testing
+
+# production
+/client/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
