fix: linter end of line issue

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -27,6 +27,7 @@
         "prettier/prettier": [
             "error",
             {
+                "endOfLine": "auto",
                 "singleQuote": true
             }
         ],
