--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -4,5 +4,6 @@
   "tabWidth": 2,
   "semi": true,
   "colon": false,
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
