Add docker files

--- a/.github/workflows/client_cd.yml
+++ b/.github/workflows/client_cd.yml
@@ -16,4 +16,6 @@ jobs:
           port: 22
           script: |
             cd projects/node-react-project-template
-            whoami
+            git checkout deploy
+            git pull
+            
