--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "devDependencies": {
-    "eslint-config-prettier": "^8.4.0"
-  },
   "dependencies": {
-    "uuid": "^8.3.2"
+    "body-parser": "^1.19.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3"
   }
 }
