--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
+  "scripts": {
+    "start": "npx nodemon --exec npx babel-node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint \"**/*.js\""
+  },
   "dependencies": {
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
+    "eslint": "^8.9.0",
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1"
   }
 }
