--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,9 @@
 {
-    "printWidth": 130,
-    "tabWidth": 2,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "bracketSpacing": true,
-    "endOfLine": "auto",
-    "htmlWhitespaceSensitivity": "css"
-  }
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": true,
+  "colon": false,
+  "arrowParens": "always",
+  "endOfLine": "auto"
+}
