--- a/.github/workflows/server_lint.yml
+++ b/.github/workflows/server_lint.yml
@@ -1,10 +1,8 @@
-name: Client Linter
+name: Server Linter
 
 on:
   push:
-    branches: [fake-branch]
-    paths:
-    - 'client/src/**'
+    branches: [your-branch]
   workflow_dispatch:
 
 jobs:
@@ -18,8 +16,8 @@ jobs:
         with:
           node-version: 16
       - name: Install
-        run: npm ci --prefix client/
+        run: npm ci
       - name: Build
-        run: CI= npm run build --prefix client/
+        run: CI= npm run build
       - name: Linter
-        run: npm run lint --prefix client/
+        run: npm run lint
