--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
         "browser": true,
         "commonjs": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "parserOptions": {
         "ecmaVersion": "latest"
