--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
+  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "test": "npx jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "npx eslint \"**/*.js\""
   },
   "dependencies": {
-    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.17.3",
@@ -17,6 +17,7 @@
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1"
   },
   "jest": {
